--- a/notebooks/pulp_pandas.ipynb
+++ b/notebooks/pulp_pandas.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pulp 数理最適化"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,16 +30,15 @@
        " (2, 3): 20.0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np, pandas as pd\n",
+    "import numpy as np\n",
     "from itertools import product\n",
     "from pulp import *\n",
-    "\n",
     "\n",
     "np.random.seed(1)\n",
     "\n",
@@ -57,17 +63,576 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a = pd.DataFrame([(i,j) for i, j in pr], columns=['倉庫', '工場'])\n",
-    "a['輸送費'] = 輸送費.flatten()\n",
-    "a[:3]\n",
+    "pandas Version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (0, 1), (0, 2), (0, 3), (1, 0), (1, 1), (1, 2), (1, 3), (2, 0), (2, 1), (2, 2), (2, 3)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>werehouse</th>\n",
+       "      <th>factory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    werehouse  factory\n",
+       "0           0        0\n",
+       "1           0        1\n",
+       "2           0        2\n",
+       "3           0        3\n",
+       "4           1        0\n",
+       "5           1        1\n",
+       "6           1        2\n",
+       "7           1        3\n",
+       "8           2        0\n",
+       "9           2        1\n",
+       "10          2        2\n",
+       "11          2        3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>werehouse</th>\n",
+       "      <th>factory</th>\n",
+       "      <th>cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    werehouse  factory  cost\n",
+       "0           0        0    10\n",
+       "1           0        1    10\n",
+       "2           0        2    11\n",
+       "3           0        3    17\n",
+       "4           1        0    16\n",
+       "5           1        1    19\n",
+       "6           1        2    12\n",
+       "7           1        3    14\n",
+       "8           2        0    15\n",
+       "9           2        1    12\n",
+       "10          2        2    14\n",
+       "11          2        3    12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>werehouse</th>\n",
+       "      <th>factory</th>\n",
+       "      <th>cost</th>\n",
+       "      <th>var</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>v0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>v1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>v2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>v3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>v4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>v5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>v6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "      <td>v7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>v8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>v9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>v10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>v11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    werehouse  factory  cost  var\n",
+       "0           0        0    10   v0\n",
+       "1           0        1    10   v1\n",
+       "2           0        2    11   v2\n",
+       "3           0        3    17   v3\n",
+       "4           1        0    16   v4\n",
+       "5           1        1    19   v5\n",
+       "6           1        2    12   v6\n",
+       "7           1        3    14   v7\n",
+       "8           2        0    15   v8\n",
+       "9           2        1    12   v9\n",
+       "10          2        2    14  v10\n",
+       "11          2        3    12  v11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸送費最適化pandas:\n",
+      "MINIMIZE\n",
+      "10*v0 + 10*v1 + 14*v10 + 12*v11 + 11*v2 + 17*v3 + 16*v4 + 19*v5 + 12*v6 + 14*v7 + 15*v8 + 12*v9 + 0\n",
+      "SUBJECT TO\n",
+      "_C1: v0 + v1 + v2 + v3 <= 35\n",
+      "\n",
+      "_C2: v4 + v5 + v6 + v7 <= 41\n",
+      "\n",
+      "_C3: v10 + v11 + v8 + v9 <= 42\n",
+      "\n",
+      "_C4: v0 + v4 + v8 >= 28\n",
+      "\n",
+      "_C5: v1 + v5 + v9 >= 29\n",
+      "\n",
+      "_C6: v10 + v2 + v6 >= 31\n",
+      "\n",
+      "_C7: v11 + v3 + v7 >= 25\n",
+      "\n",
+      "VARIABLES\n",
+      "v0 Continuous\n",
+      "v1 Continuous\n",
+      "v10 Continuous\n",
+      "v11 Continuous\n",
+      "v2 Continuous\n",
+      "v3 Continuous\n",
+      "v4 Continuous\n",
+      "v5 Continuous\n",
+      "v6 Continuous\n",
+      "v7 Continuous\n",
+      "v8 Continuous\n",
+      "v9 Continuous\n",
+      "\n",
+      "Status: Optimal\n",
+      "Without Zero\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>werehouse</th>\n",
+       "      <th>factory</th>\n",
+       "      <th>cost</th>\n",
+       "      <th>var</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>sub_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>v0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>280.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>v1</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>v6</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>372.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "      <td>v7</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>v9</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>264.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>v11</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>240.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    werehouse  factory  cost  var   Val  sub_total\n",
+       "0           0        0    10   v0  28.0      280.0\n",
+       "1           0        1    10   v1   7.0       70.0\n",
+       "6           1        2    12   v6  31.0      372.0\n",
+       "7           1        3    14   v7   5.0       70.0\n",
+       "9           2        1    12   v9  22.0      264.0\n",
+       "11          2        3    12  v11  20.0      240.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from itertools import product\n",
+    "from pulp import *\n",
+    "\n",
+    "\n",
+    "np.random.seed(1)\n",
+    "\n",
+    "nw, nf = 3, 4\n",
+    "pr = list(product(range(nw),range(nf)))\n",
+    "supply = np.random.randint(30, 50, nw)\n",
+    "demand = np.random.randint(20, 40, nf)\n",
+    "cost = np.random.randint(10, 20, (nw,nf))\n",
+    "\n",
+    "print(pr)\n",
     "\n",
     "m2 = LpProblem('輸送費最適化pandas', sense=LpMinimize)\n",
-    "a['Var'] = [LpVariable(f'v{i}', lowBound=0) for i in a.index]"
+    "\n",
+    "df = pd.DataFrame([(i, j) for i, j in pr], columns=['werehouse', 'factory'])\n",
+    "display(df)\n",
+    "df['cost'] = cost.flatten()\n",
+    "display(df)\n",
+    "\n",
+    "df['var'] = [LpVariable(f'v{i}', lowBound=0) for i in df.index]\n",
+    "display(df)\n",
+    "\n",
+    "m2 += lpDot(df['cost'], df['var'])\n",
+    "m2\n",
+    "\n",
+    "for k, v in df.groupby('werehouse'):\n",
+    "    m2 += lpSum(v['var']) <= supply[k]\n",
+    "for k, v in df.groupby('factory'):\n",
+    "    m2 += lpSum(v['var']) >= demand[k]\n",
+    "\n",
+    "print(m2)\n",
+    "\n",
+    "status = m2.solve()\n",
+    "print('Status:', LpStatus[status])\n",
+    "df['Val'] = df['var'].apply(value)\n",
+    "df['sub_total'] = df['Val'] * df['cost']\n",
+    "\n",
+    "print('Without Zero')\n",
+    "display(df[df['Val']>0])"
    ]
   },
   {
