--- a/notebooks/chapter_04_pandas_ver_02.ipynb
+++ b/notebooks/chapter_04_pandas_ver_02.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,24 +172,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>freq</th>\n",
+       "      <th>seg_id</th>\n",
+       "      <th>prob_1</th>\n",
+       "      <th>prob_2</th>\n",
+       "      <th>prob_3</th>\n",
+       "      <th>prob_(1-1)</th>\n",
+       "      <th>prob_(2-1)</th>\n",
+       "      <th>prob_(3-1)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>20</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>35</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>35</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>50</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age freq  seg_id  prob_1  prob_2  prob_3  prob_(1-1)  prob_(2-1)  \\\n",
+       "0   19    0       1    0.07    0.12    0.29         0.0        0.05   \n",
+       "1   19    1       2    0.21    0.30    0.58         0.0        0.09   \n",
+       "2   19    2       3    0.28    0.39    0.74         0.0        0.11   \n",
+       "3   19    3       4    0.35    0.45    0.77         0.0        0.10   \n",
+       "4   20    0       5    0.11    0.17    0.37         0.0        0.06   \n",
+       "5   20    1       6    0.32    0.43    0.72         0.0        0.11   \n",
+       "6   20    2       7    0.42    0.55    0.93         0.0        0.13   \n",
+       "7   20    3       8    0.52    0.63    0.94         0.0        0.11   \n",
+       "8   35    0       9    0.08    0.14    0.33         0.0        0.06   \n",
+       "9   35    1      10    0.25    0.35    0.67         0.0        0.10   \n",
+       "10  35    2      11    0.34    0.45    0.86         0.0        0.11   \n",
+       "11  35    3      12    0.42    0.52    0.89         0.0        0.10   \n",
+       "12  50    0      13    0.07    0.13    0.32         0.0        0.06   \n",
+       "13  50    1      14    0.21    0.33    0.65         0.0        0.12   \n",
+       "14  50    2      15    0.28    0.42    0.84         0.0        0.14   \n",
+       "15  50    3      16    0.35    0.49    0.88         0.0        0.14   \n",
+       "\n",
+       "    prob_(3-1)  \n",
+       "0         0.22  \n",
+       "1         0.37  \n",
+       "2         0.46  \n",
+       "3         0.42  \n",
+       "4         0.26  \n",
+       "5         0.40  \n",
+       "6         0.51  \n",
+       "7         0.42  \n",
+       "8         0.25  \n",
+       "9         0.42  \n",
+       "10        0.52  \n",
+       "11        0.47  \n",
+       "12        0.25  \n",
+       "13        0.44  \n",
+       "14        0.56  \n",
+       "15        0.53  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# クーポン付与による来客率の増加分を作成\n",
     "copy_df = prob_df.copy()\n",
     "copy_df.columns = ['age', 'freq', 'seg_id', 'prob_1', 'prob_2', 'prob_3']\n",
+    "\n",
+    "def string_substitution(x):\n",
+    "    tralslate_dict = {\n",
+    "        'age20~34': '20', 'age35~49': '35', 'age~19': '19', 'age50~': '50',\n",
+    "        'freq0': '0', 'freq1': '1', 'freq2': '2', 'freq3~': '3',\n",
+    "    }\n",
+    "    return tralslate_dict[x]\n",
+    "\n",
+    "copy_df['age'] = copy_df['age'].apply(string_substitution)\n",
+    "copy_df['freq'] = copy_df['freq'].apply(string_substitution)\n",
+    "\n",
     "for i in range(3):\n",
     "    copy_df[f'prob_({i+1}-1)'] = copy_df[f'prob_{i+1}'] - copy_df['prob_1']\n",
-    "# copy_df['prob_(2-1)'] = copy_df['prob_2'] - copy_df['prob_1']\n",
-    "# copy_df['prob_(3-1)'] = copy_df['prob_3'] - copy_df['prob_1']\n",
-    "# print(copy_df.shape)\n",
-    "# display(copy_df.head(3))"
+    "\n",
+    "copy_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,24 +508,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Maxmize\n",
     "problem = LpProblem(name='DiscountCouponProblem02', sense=LpMaximize)\n",
     "\n",
-    "# 最大化する値\n",
+    "# Maximize visitor rates by coupons\n",
     "problem += lpSum(p_df['variable'] * p_df['prob_diff'] * p_df['members'])\n",
     "\n",
-    "# 制約条件\n",
+    "# There is always one assignment\n",
     "for k, v in p_df.groupby('seg_id'):\n",
     "    problem += lpSum(v['variable'].sum()) == 1\n",
     "\n",
-    "# 制約条件\n",
+    "# Below a certain amount\n",
     "problem += lpSum(p_df['variable'] * p_df['prob'] * p_df['cost'] * p_df['members']) <= 1000000\n",
     "\n",
-    "# 制約条件\n",
+    "# segment_each_member_rate_10_percent_or_more\n",
     "for v in p_df['variable']:\n",
     "    problem += v >= 0.1\n",
     "\n",
@@ -253,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,11 +543,12 @@
      "text": [
       "Status : Optimal\n",
       "Result : 326.1\n",
-      "Time : 0.109 (sec)\n"
+      "Time : 0.122 (sec)\n"
      ]
     }
    ],
    "source": [
+    "# 計算及び結果\n",
     "time_start = time.time()\n",
     "status = problem.solve()\n",
     "time_stop = time.time()\n",
@@ -279,7 +561,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>freq</th>\n",
+       "      <th>seg_id</th>\n",
+       "      <th>prob</th>\n",
+       "      <th>prob_diff</th>\n",
+       "      <th>dm</th>\n",
+       "      <th>members</th>\n",
+       "      <th>cost</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>x_s01m1</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>x_s02m1</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>x_s03m1</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>x_s04m1</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>x_s05m1</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  age freq  seg_id  prob  prob_diff  dm  members  cost variable  result\n",
+       "0  19    0       1  0.07        0.0   1      200     0  x_s01m1     0.1\n",
+       "1  19    1       2  0.21        0.0   1      150     0  x_s02m1     0.8\n",
+       "2  19    2       3  0.28        0.0   1       50     0  x_s03m1     0.8\n",
+       "3  19    3       4  0.35        0.0   1      100     0  x_s04m1     0.8\n",
+       "4  20    0       5  0.11        0.0   1      600     0  x_s05m1     0.8"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +715,7 @@
        "999999.99968"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +909,7 @@
        "16           0.8  0.100000  0.100000"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
