--- a/notebooks/chapter_03_practice_01.ipynb
+++ b/notebooks/chapter_03_practice_01.ipynb
@@ -263,6 +263,333 @@
       "G 40 [7, 18, 28, 32, 35, 44, 52, 55, 57, 60, 64, 66, 81, 117, 118, 131, 147, 155, 181, 186, 194, 204, 207, 208, 214, 215, 216, 223, 226, 228, 229, 250, 262, 265, 279, 280, 290, 296, 299, 313]\n",
       "H 40 [6, 8, 20, 26, 29, 30, 34, 40, 47, 62, 77, 86, 90, 94, 133, 137, 144, 157, 162, 163, 174, 191, 201, 234, 235, 237, 248, 251, 253, 259, 274, 285, 286, 294, 295, 297, 302, 307, 311, 314]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'A': [2,\n",
+       "  9,\n",
+       "  11,\n",
+       "  19,\n",
+       "  39,\n",
+       "  42,\n",
+       "  63,\n",
+       "  65,\n",
+       "  71,\n",
+       "  79,\n",
+       "  83,\n",
+       "  85,\n",
+       "  88,\n",
+       "  99,\n",
+       "  109,\n",
+       "  111,\n",
+       "  123,\n",
+       "  126,\n",
+       "  136,\n",
+       "  138,\n",
+       "  145,\n",
+       "  148,\n",
+       "  165,\n",
+       "  168,\n",
+       "  173,\n",
+       "  177,\n",
+       "  179,\n",
+       "  180,\n",
+       "  193,\n",
+       "  199,\n",
+       "  206,\n",
+       "  224,\n",
+       "  233,\n",
+       "  240,\n",
+       "  264,\n",
+       "  267,\n",
+       "  291,\n",
+       "  292,\n",
+       "  298],\n",
+       " 'B': [15,\n",
+       "  43,\n",
+       "  48,\n",
+       "  50,\n",
+       "  70,\n",
+       "  82,\n",
+       "  89,\n",
+       "  91,\n",
+       "  102,\n",
+       "  104,\n",
+       "  113,\n",
+       "  114,\n",
+       "  120,\n",
+       "  121,\n",
+       "  124,\n",
+       "  127,\n",
+       "  134,\n",
+       "  146,\n",
+       "  149,\n",
+       "  159,\n",
+       "  167,\n",
+       "  170,\n",
+       "  176,\n",
+       "  190,\n",
+       "  203,\n",
+       "  213,\n",
+       "  220,\n",
+       "  222,\n",
+       "  231,\n",
+       "  238,\n",
+       "  245,\n",
+       "  263,\n",
+       "  270,\n",
+       "  275,\n",
+       "  276,\n",
+       "  283,\n",
+       "  287,\n",
+       "  312,\n",
+       "  317],\n",
+       " 'C': [3,\n",
+       "  14,\n",
+       "  23,\n",
+       "  25,\n",
+       "  27,\n",
+       "  31,\n",
+       "  33,\n",
+       "  41,\n",
+       "  49,\n",
+       "  53,\n",
+       "  54,\n",
+       "  58,\n",
+       "  73,\n",
+       "  93,\n",
+       "  97,\n",
+       "  98,\n",
+       "  107,\n",
+       "  122,\n",
+       "  142,\n",
+       "  152,\n",
+       "  156,\n",
+       "  160,\n",
+       "  171,\n",
+       "  187,\n",
+       "  210,\n",
+       "  211,\n",
+       "  217,\n",
+       "  219,\n",
+       "  227,\n",
+       "  236,\n",
+       "  242,\n",
+       "  254,\n",
+       "  258,\n",
+       "  260,\n",
+       "  268,\n",
+       "  273,\n",
+       "  277,\n",
+       "  278,\n",
+       "  301,\n",
+       "  318],\n",
+       " 'D': [13,\n",
+       "  16,\n",
+       "  36,\n",
+       "  37,\n",
+       "  51,\n",
+       "  56,\n",
+       "  59,\n",
+       "  61,\n",
+       "  67,\n",
+       "  68,\n",
+       "  75,\n",
+       "  84,\n",
+       "  92,\n",
+       "  108,\n",
+       "  128,\n",
+       "  139,\n",
+       "  140,\n",
+       "  158,\n",
+       "  161,\n",
+       "  175,\n",
+       "  183,\n",
+       "  192,\n",
+       "  198,\n",
+       "  200,\n",
+       "  205,\n",
+       "  218,\n",
+       "  221,\n",
+       "  225,\n",
+       "  241,\n",
+       "  246,\n",
+       "  252,\n",
+       "  255,\n",
+       "  256,\n",
+       "  257,\n",
+       "  261,\n",
+       "  266,\n",
+       "  284,\n",
+       "  293,\n",
+       "  308,\n",
+       "  316],\n",
+       " 'E': [5,\n",
+       "  10,\n",
+       "  21,\n",
+       "  22,\n",
+       "  24,\n",
+       "  38,\n",
+       "  69,\n",
+       "  72,\n",
+       "  78,\n",
+       "  87,\n",
+       "  96,\n",
+       "  105,\n",
+       "  106,\n",
+       "  115,\n",
+       "  129,\n",
+       "  132,\n",
+       "  141,\n",
+       "  143,\n",
+       "  150,\n",
+       "  154,\n",
+       "  164,\n",
+       "  166,\n",
+       "  184,\n",
+       "  189,\n",
+       "  195,\n",
+       "  196,\n",
+       "  197,\n",
+       "  212,\n",
+       "  243,\n",
+       "  244,\n",
+       "  247,\n",
+       "  249,\n",
+       "  269,\n",
+       "  271,\n",
+       "  288,\n",
+       "  300,\n",
+       "  305,\n",
+       "  309,\n",
+       "  310,\n",
+       "  315],\n",
+       " 'F': [1,\n",
+       "  4,\n",
+       "  12,\n",
+       "  17,\n",
+       "  45,\n",
+       "  46,\n",
+       "  74,\n",
+       "  76,\n",
+       "  80,\n",
+       "  95,\n",
+       "  100,\n",
+       "  101,\n",
+       "  103,\n",
+       "  110,\n",
+       "  112,\n",
+       "  116,\n",
+       "  119,\n",
+       "  125,\n",
+       "  130,\n",
+       "  135,\n",
+       "  151,\n",
+       "  153,\n",
+       "  169,\n",
+       "  172,\n",
+       "  178,\n",
+       "  182,\n",
+       "  185,\n",
+       "  188,\n",
+       "  202,\n",
+       "  209,\n",
+       "  230,\n",
+       "  232,\n",
+       "  239,\n",
+       "  272,\n",
+       "  281,\n",
+       "  282,\n",
+       "  289,\n",
+       "  303,\n",
+       "  304,\n",
+       "  306],\n",
+       " 'G': [7,\n",
+       "  18,\n",
+       "  28,\n",
+       "  32,\n",
+       "  35,\n",
+       "  44,\n",
+       "  52,\n",
+       "  55,\n",
+       "  57,\n",
+       "  60,\n",
+       "  64,\n",
+       "  66,\n",
+       "  81,\n",
+       "  117,\n",
+       "  118,\n",
+       "  131,\n",
+       "  147,\n",
+       "  155,\n",
+       "  181,\n",
+       "  186,\n",
+       "  194,\n",
+       "  204,\n",
+       "  207,\n",
+       "  208,\n",
+       "  214,\n",
+       "  215,\n",
+       "  216,\n",
+       "  223,\n",
+       "  226,\n",
+       "  228,\n",
+       "  229,\n",
+       "  250,\n",
+       "  262,\n",
+       "  265,\n",
+       "  279,\n",
+       "  280,\n",
+       "  290,\n",
+       "  296,\n",
+       "  299,\n",
+       "  313],\n",
+       " 'H': [6,\n",
+       "  8,\n",
+       "  20,\n",
+       "  26,\n",
+       "  29,\n",
+       "  30,\n",
+       "  34,\n",
+       "  40,\n",
+       "  47,\n",
+       "  62,\n",
+       "  77,\n",
+       "  86,\n",
+       "  90,\n",
+       "  94,\n",
+       "  133,\n",
+       "  137,\n",
+       "  144,\n",
+       "  157,\n",
+       "  162,\n",
+       "  163,\n",
+       "  174,\n",
+       "  191,\n",
+       "  201,\n",
+       "  234,\n",
+       "  235,\n",
+       "  237,\n",
+       "  248,\n",
+       "  251,\n",
+       "  253,\n",
+       "  259,\n",
+       "  274,\n",
+       "  285,\n",
+       "  286,\n",
+       "  294,\n",
+       "  295,\n",
+       "  297,\n",
+       "  302,\n",
+       "  307,\n",
+       "  311,\n",
+       "  314]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -270,7 +597,8 @@
     "for c in C:\n",
     "    C2Ss[c] = [s for s in S if x[s, c].value() == 1]\n",
     "for class_, id_ in C2Ss.items():\n",
-    "    print(class_, len(id_), id_)"
+    "    print(class_, len(id_), id_)\n",
+    "C2Ss"
    ]
   },
   {
@@ -1272,6 +1600,196 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>leader_flag</th>\n",
+       "      <th>support_flag</th>\n",
+       "      <th>score</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>init_assigned_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>335</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>379</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>350</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>301</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>E</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>317</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>314</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>244</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>315</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>309</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>316</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>239</td>\n",
+       "      <td>272.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>317</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>356</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>H</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317</th>\n",
+       "      <td>318</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>248.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>318 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     student_id  gender  leader_flag  support_flag  score   rank  \\\n",
+       "0             1       0            0             0    335  109.0   \n",
+       "1             2       1            0             0    379   38.0   \n",
+       "2             3       0            0             0    350   79.0   \n",
+       "3             4       0            0             0    301  172.0   \n",
+       "4             5       1            0             0    317  147.0   \n",
+       "..          ...     ...          ...           ...    ...    ...   \n",
+       "313         314       0            0             0    244  263.0   \n",
+       "314         315       1            0             0    309  162.0   \n",
+       "315         316       0            0             0    239  272.0   \n",
+       "316         317       1            0             0    356   63.0   \n",
+       "317         318       0            0             0    256  248.0   \n",
+       "\n",
+       "    init_assigned_class  \n",
+       "0                     F  \n",
+       "1                     G  \n",
+       "2                     H  \n",
+       "3                     E  \n",
+       "4                     D  \n",
+       "..                  ...  \n",
+       "313                   H  \n",
+       "314                   C  \n",
+       "315                   A  \n",
+       "316                   H  \n",
+       "317                   A  \n",
+       "\n",
+       "[318 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -1296,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
