--- a/notebooks/chapter_05_practice_01.ipynb
+++ b/notebooks/chapter_05_practice_01.ipynb
@@ -490,59 +490,59 @@
     "# m += zangyo_costs + outsourse_costs\n",
     "m += outsourse_costs\n",
     "\n",
-    "# for d in D:\n",
-    "#     for k1 in K:\n",
-    "#         # A-1 変数x x[d, k1, k2]の合計は 1 以下\n",
-    "#         m += lpSum([x[d, k2, k1] for k2 in K]) <= 1\n",
-    "#         # A-2 変数x x[d, k1, k2]の合計 と (x[d, k2, k1])の合計は同じ\n",
-    "#         m += lpSum([x[d, k1, k2] for k2 in K]) == lpSum([x[d, k2, k1] for k2 in K])\n",
+    "for d in D:\n",
+    "    for k1 in K:\n",
+    "        # A-1 変数x x[d, k1, k2]の合計は 1 以下\n",
+    "        m += lpSum([x[d, k2, k1] for k2 in K]) <= 1\n",
+    "        # A-2 変数x x[d, k1, k2]の合計 と (x[d, k2, k1])の合計は同じ\n",
+    "        m += lpSum([x[d, k1, k2] for k2 in K]) == lpSum([x[d, k2, k1] for k2 in K])\n",
     "\n",
-    "#     # B-1 変数u(順番)は、地点Pはゼロをとる\n",
-    "#     m += u[d, 'p'] == 0\n",
+    "    # B-1 変数u(順番)は、地点Pはゼロをとる\n",
+    "    m += u[d, 'p'] == 0\n",
     "\n",
-    "#     # B-2 変数u(順番)は、1から地点数以下の値をとる\n",
-    "#     for s in S:\n",
-    "#         m += u[d, s] >= 1\n",
-    "#         m += u[d, s] <= len(S)\n",
+    "    # B-2 変数u(順番)は、1から地点数以下の値をとる\n",
+    "    for s in S:\n",
+    "        m += u[d, s] >= 1\n",
+    "        m += u[d, s] <= len(S)\n",
     "\n",
-    "#     # B-3 変数u(順番)は、変数x=0で必ず成立し、変数x=1 で s1<s2 の順番をとる\n",
-    "#     for s1 in S:\n",
-    "#         for s2 in S:\n",
-    "#             m += u[d, s1] + 1 <= u[d, s2] + (len(K)-1) * (1-x[d, s1, s2])\n",
+    "    # B-3 変数u(順番)は、変数x=0で必ず成立し、変数x=1 で s1<s2 の順番をとる\n",
+    "    for s1 in S:\n",
+    "        for s2 in S:\n",
+    "            m += u[d, s1] + 1 <= u[d, s2] + (len(K)-1) * (1-x[d, s1, s2])\n",
     "\n",
-    "# for r in R:\n",
-    "#     # C-1 変数y(荷物)は期間内で1回\n",
-    "#     m += lpSum([y[d, r] for d in D]) <= 1\n",
+    "for r in R:\n",
+    "    # C-1 変数y(荷物)は期間内で1回\n",
+    "    m += lpSum([y[d, r] for d in D]) <= 1\n",
     "\n",
-    "# for d in D:\n",
-    "#     for r in R:\n",
-    "#         tar_s = R2SWBE[r][0]\n",
-    "#         # D-1 変数y(荷物)は変数xの合計より小さくなる\n",
-    "#         m += y[d, r] <= lpSum([x[d, k, tar_s] for k in K])\n",
+    "for d in D:\n",
+    "    for r in R:\n",
+    "        tar_s = R2SWBE[r][0]\n",
+    "        # D-1 変数y(荷物)は変数xの合計より小さくなる\n",
+    "        m += y[d, r] <= lpSum([x[d, k, tar_s] for k in K])\n",
     "\n",
-    "# MAX_WEIGHT = 4000\n",
-    "# for d in D:\n",
-    "#     # E-1 最大重量4000以下\n",
-    "#     m += lpSum([y[d, r] * R2SWBE[r][1] for r in R]) <= MAX_WEIGHT\n",
+    "MAX_WEIGHT = 4000\n",
+    "for d in D:\n",
+    "    # E-1 最大重量4000以下\n",
+    "    m += lpSum([y[d, r] * R2SWBE[r][1] for r in R]) <= MAX_WEIGHT\n",
     "\n",
-    "# MAX_OFFICE_HOURS = 8\n",
-    "# for d in D:\n",
-    "#     # F-1 最大労働時間は8時間以下\n",
-    "#     m += lpSum([KK2T[k1, k2] * x[d, k1, k2] for k1 in K for k2 in K]) - MAX_OFFICE_HOURS <= h[d]\n",
+    "MAX_OFFICE_HOURS = 8\n",
+    "for d in D:\n",
+    "    # F-1 最大労働時間は8時間以下\n",
+    "    m += lpSum([KK2T[k1, k2] * x[d, k1, k2] for k1 in K for k2 in K]) - MAX_OFFICE_HOURS <= h[d]\n",
     "\n",
-    "# OVERWORK_HOURS = 3\n",
-    "# for d in D:\n",
-    "#     # 残業/日 は3時間以内\n",
-    "#     m += h[d] <= OVERWORK_HOURS\n",
+    "OVERWORK_HOURS = 3\n",
+    "for d in D:\n",
+    "    # 残業/日 は3時間以内\n",
+    "    m += h[d] <= OVERWORK_HOURS\n",
     "\n",
-    "# for r in R:\n",
-    "#     for d in D:\n",
-    "#         if d < R2SWBE[r][2]:\n",
-    "#             # H-1 指定日以前は禁止\n",
-    "#             m += y[d, r] == 0\n",
-    "#         if R2SWBE[r][3] < d:\n",
-    "#             # H-1 指定日以後は禁止\n",
-    "#             m += y[d, r] == 0\n",
+    "for r in R:\n",
+    "    for d in D:\n",
+    "        if d < R2SWBE[r][2]:\n",
+    "            # H-1 指定日以前は禁止\n",
+    "            m += y[d, r] == 0\n",
+    "        if R2SWBE[r][3] < d:\n",
+    "            # H-1 指定日以後は禁止\n",
+    "            m += y[d, r] == 0\n",
     "\n",
     "m"
    ]
